[package]
name = "tck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.44.2", features = ["signal"] }
anyhow = "1.0.98"
tower = { version = "0.4.13", features = ["tracing"] }
tracing = "0.1.41"
async-trait = "0.1.88"
hyper = "1.6.0"
tower-http = { version = "0.5.2", features = ["full"] }
hedera = { path = "../." }
hedera-proto = { path = "../protobufs", version = "0.16.0", features = [
  "time_0_3",
  "fraction",
] }
once_cell = "1.21.3"
futures-util = "0.3.30"
serde_json = {version = "1.0.140", features = ["raw_value"] }
serde = { version = "1.0.219", features = ["derive"] }
time = "0.3.41"
hex = "0.4.3"
hex-literal = "1.0.0"

[dependencies.jsonrpsee]
version = "0.24.9"
features = ["server", "macros", "client-core"]

